adds an algorithm that allows js to compute the nps score and display an alert for now

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
       <nav class="navbar bg-body-tertiary">
         <div class="container">
           <span class="navbar-brand headerLinks">Safaricom Shop, Migori</span>
-          <h5 id="agent">
+          <h5 id="agentDetails">
             <i class="bi bi-person-bounding-box"></i>
-            <span class="headerLinks">Silas Hezron</span>
+            <span class="headerLinks" id="agentName">Silas Hezron</span>
           </h5>
         </div>
       </nav>
