adds an NPS request button at the bottom

--- a/index.html
+++ b/index.html
@@ -10,21 +10,23 @@
   </head>
   <body>
     <header id="headerSection">
-      <nav class="navbar bg-body-tertiary">
-        <div class="container">
-          <span class="navbar-brand headerLinks">Safaricom Shop, Migori</span>
-          <h5 id="agentDetails">
-            <i class="bi bi-person-bounding-box"></i>
-            <span class="headerLinks" id="agentName">Silas Hezron</span>
-          </h5>
-        </div>
-      </nav>
+
+        <nav class="navbar  bg-body-tertiary">
+            <div class="container">
+                <a class="navbar-brand headerLinks" href="#">Safaricom Shop, Migori</a>
+                <div class="" id="navbarNavAltMarkup">
+                    <div class="navbar-nav ms-auto">
+                        <button type="button" class="nav-link btn headerLinks" id="agentName">Silas Hezron</button>
+                    </div>
+                </div>
+            </div>
+        </nav>
+
     </header>
 
-    <main class="my-md-3 my-5" id="mainSection">
-        <div class="container py-md-5" id="emojiSection">
+    <main class="my-md-3" id="mainSection">
+        <div class="container py-md-4" id="emojiSection">
             <div class="row gy-3">
-
                 <div class="col-12 col-md-4">
                     <div class="card bg-dark text-center">
                     <div class="card-header reaction fs-3 text-light">BAD SERVICE!</div>
@@ -75,6 +77,10 @@
                 </div>
 
             </div>
+        </div>
+
+        <div class="container text-center mb-5 mt-2">
+            <button type="button" class="btn rating" id="agentScore">SHOW MY NPS</button>
         </div>
     </main>
 
