sorts out the nps clculation and button color change based on target

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <a class="navbar-brand headerLinks" href="#">Safaricom Shop, Migori</a>
                 <div class="" id="navbarNavAltMarkup">
                     <div class="navbar-nav ms-auto">
-                        <button type="button" class="nav-link btn headerLinks" id="agentName">Silas Hezron</button>
+                        <button type="button" class="btn headerLinks" id="agentName">Shezron's NPS</button>
                     </div>
                 </div>
             </div>
@@ -28,51 +28,38 @@
         <div class="container py-md-4" id="emojiSection">
             <div class="row gy-3">
                 <div class="col-12 col-md-4">
-                    <div class="card bg-dark text-center">
-                    <div class="card-header reaction fs-3 text-light">BAD SERVICE!</div>
-                    <div class="card-body">
-                        <h1 class="emojis heading display-1">
-                        <i class="bi bi-emoji-frown-fill text-warning" style="font-size: 200%"></i>
-                        </h1>
-                    </div>
-                    <div class="card-footer text-body-secondary d-flex">
-                        <span class="col btn rating text-light fs-4">1</span>
-                        <span class="col btn rating text-light fs-4">2</span>
-                        <span class="col btn rating text-light fs-4">3</span>
-                        <span class="col btn rating text-light fs-4">4</span>
-                        <span class="col btn rating text-light fs-4">5</span>
-                    </div>
+                    <div class="card bg-dark text-center emojis" id="poor">
+                        <div class="card-header reaction fs-3 text-light">POOR!</div>
+                        <div class="card-body heading display-1">
+                            <a class="stretched-link" id="poor"><i class="bi bi-emoji-frown-fill text-warning" style="font-size: 200%"></i></a>
+                        </div>
+                        <div class="card-footer d-flex">
+                            <p class="text-light rating">I am completely unhappy with the customer service I got!</p>
+                        </div>
                     </div>
                 </div>
 
                 <div class="col-12 col-md-4 ">
-                    <div class="card bg-dark text-center">
-                    <div class="card-header reaction text-light fs-3">CAN DO BETTER!</div>
-                    <div class="card-body">
-                        <h1 class="emojis heading display-1">
-                        <i class="bi bi-emoji-neutral-fill text-warning" style="font-size: 200%"></i>
-                        </h1>
-                    </div>
-                    <div class="card-footer text-body-secondary d-flex">
-                        <span class="col btn rating text-light fs-4">6</span>
-                        <span class="col btn rating text-light fs-4">7</span>
-                    </div>
+                    <div class="card bg-dark text-center emojis" id="average">
+                        <div class="card-header reaction text-light fs-3">AVERAGE!</div>
+                        <div class="card-body heading display-1">
+                            <a class="stretched-link" id="average"><i class="bi bi-emoji-neutral-fill text-warning" style="font-size: 200%"></i></a>
+                        </div>
+                        <div class="card-footer d-flex">
+                            <p class="text-light rating">The customer service I got is ok but it can get better!</p>
+                        </div>
                     </div>
                 </div>
 
                 <div class="col-12 col-md-4">
-                    <div class="card bg-dark text-center">
-                    <div class="card-header reaction text-light fs-3">BEST SERVICE</div>
-                    <div class="card-body">
-                        <h1 class="emojis heading display-1">
-                        <i class="bi bi-emoji-smile-fill text-warning" style="font-size: 200%"></i>
-                        </h1>
-                    </div>
-                    <div class="card-footer text-body-secondary d-flex">
-                        <span class="col btn rating text-light fs-4">8</span>
-                        <span class="col btn rating text-light fs-4">9</span>
-                        <span class="col btn rating text-light fs-4">10</span>
-                    </div>
+                    <div class="card bg-dark text-center emojis">
+                        <div class="card-header reaction text-light fs-3">EXCELLENT!</div>
+                        <div class="card-body heading display-1">
+                            <a class="stretched-link" id="excellent"><i class="bi bi-emoji-smile-fill text-warning" style="font-size: 200%"></i></a>
+                        </div>
+                        <div class="card-footer d-flex">
+                            <p class="text-light rating">I am very happy with the customer service I was given - keep it up!</p>
+                        </div>
                     </div>
                 </div>
 
